Activated html5 mode and superstatic readiness. Added npm start script (for superstatic). Renamed home to suenth.

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html ng-app="webSuenth" ng-controller="AppCtrl">
   <head>
-    <title ng-bind="pageTitle"></title>
-
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <base href="/">
+    <title ng-bind="pageTitle"></title>
 
     <!-- font awesome from BootstrapCDN -->
     <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
@@ -35,7 +36,7 @@
         <div class="collapse navbar-collapse" collapse="menuCollapsed">
           <ul class="nav navbar-nav">
             <li ui-sref-active="active">
-              <a href ui-sref="home">
+              <a href ui-sref="suenth">
                 <i class="fa fa-music"></i>
                 S&uuml;nth
               </a>
