--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <base href="http://herrherrmann.net/webSuenth/"> -->
     <base href="/">
     <title ng-bind="pageTitle"></title>
 
